--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     body {
       margin: 0;
       padding: 0;
-      background: linear-gradient(120deg, #fceabb, #f8b195);
+      background: linear-gradient(to bottom right, #fff5e4, #fce1e4);
       font-family: 'Pacifico', cursive;
       display: flex;
       flex-direction: column;
@@ -20,7 +20,7 @@
     }
 
     h1 {
-      font-size: 2.2rem;
+      font-size: 2.5rem;
       color: #6d6875;
       margin-bottom: 10px;
       animation: floatText 3s ease-in-out infinite;
@@ -32,13 +32,14 @@
     }
 
     .cake {
-      width: 180px;
-      height: 150px;
+      width: 200px;
+      height: 160px;
       background: #ffb5a7;
-      border-radius: 10px;
+      border-radius: 20px 20px 10px 10px;
       position: relative;
       box-shadow: 0 4px 10px rgba(0,0,0,0.2);
-      transition: transform 1s ease;
+      margin-top: 20px;
+      transition: transform 0.5s ease;
     }
 
     .cake::before {
@@ -50,21 +51,21 @@
       width: 100%;
       background: repeating-linear-gradient(
         45deg,
-        #fff,
-        #fff 5px,
-        #ffcad4 5px,
-        #ffcad4 10px
+        #ffffff,
+        #ffffff 5px,
+        #ffc8dd 5px,
+        #ffc8dd 10px
       );
-      border-radius: 10px 10px 0 0;
+      border-radius: 20px 20px 0 0;
     }
 
     .candle {
       width: 10px;
       height: 40px;
-      background: #fff;
+      background: #ffffff;
       position: absolute;
       top: -50px;
-      left: 85px;
+      left: 95px;
       border-radius: 5px;
     }
 
@@ -81,7 +82,7 @@
 
     @keyframes flameFlicker {
       from { transform: scaleY(1); }
-      to { transform: scaleY(1.2); }
+      to { transform: scaleY(1.3); }
     }
 
     .knife {
@@ -89,7 +90,7 @@
       height: 10px;
       background: #999;
       position: absolute;
-      top: 300px;
+      top: 320px;
       left: 50%;
       margin-left: -40px;
       border-radius: 5px;
@@ -102,7 +103,7 @@
       font-size: 1.2rem;
       color: #4e4e4e;
       text-align: center;
-      margin-top: 20px;
+      margin-top: 30px;
       white-space: nowrap;
       overflow: hidden;
       border-right: 3px solid #4e4e4e;
@@ -113,6 +114,24 @@
     @keyframes typewriter {
       from { width: 0; opacity: 1; }
       to { width: 100%; opacity: 1; }
+    }
+
+    .gift {
+      position: absolute;
+      bottom: 50px;
+      background: #ffafcc;
+      padding: 20px;
+      border-radius: 20px;
+      box-shadow: 0 0 20px rgba(0,0,0,0.2);
+      display: none;
+      font-size: 1.4rem;
+      color: #fff;
+      animation: popIn 1s ease forwards;
+    }
+
+    @keyframes popIn {
+      0% { transform: scale(0); opacity: 0; }
+      100% { transform: scale(1); opacity: 1; }
     }
 
     audio {
@@ -135,7 +154,9 @@
     happy birthday many many wishes to you I hope you will succeed in life and thoda kam soya karo buddhu 😂
   </div>
 
-  <audio id="bgmusic" autoplay loop>
+  <div class="gift" id="gift">🎁 Here's a hidden gift of love and blessings!</div>
+
+  <audio id="bgmusic">
     <source src="https://www.soundhelix.com/examples/mp3/SoundHelix-Song-1.mp3" type="audio/mp3">
   </audio>
 
@@ -143,9 +164,11 @@
     const knife = document.getElementById("knife");
     const cake = document.getElementById("cake");
     const wish = document.getElementById("wish");
+    const gift = document.getElementById("gift");
     const music = document.getElementById("bgmusic");
 
     let offsetX, offsetY;
+    let cakeCut = false;
 
     knife.addEventListener('touchstart', function(e) {
       const touch = e.touches[0];
@@ -164,15 +187,20 @@
       const knifeRect = knife.getBoundingClientRect();
       const cakeRect = cake.getBoundingClientRect();
 
-      if (
+      if (!cakeCut &&
         knifeRect.top < cakeRect.bottom &&
         knifeRect.bottom > cakeRect.top &&
         knifeRect.left < cakeRect.right &&
         knifeRect.right > cakeRect.left
       ) {
+        cakeCut = true;
         cake.style.transform = "scale(1.05)";
+        setTimeout(() => music.play().catch(() => {}), 1500);
         wish.style.animation = "typewriter 4s steps(60, end) forwards";
-        music.play().catch(() => {});
+        wish.style.opacity = 1;
+        setTimeout(() => {
+          gift.style.display = "block";
+        }, 5000);
       }
     }, false);
   </script>
