--- a/index.html
+++ b/index.html
@@ -1,15 +1,14 @@
-<!DOCTYPE html>
-<html lang="en">
+<!DOCTYPE html><html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>🎂 Happy Birthday!</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Happy Birthday Vaibhavi</title>
   <link href="https://fonts.googleapis.com/css2?family=Pacifico&display=swap" rel="stylesheet">
+  <script src="https://cdn.jsdelivr.net/npm/canvas-confetti@1.6.0/dist/confetti.browser.min.js"></script>
   <style>
     body {
       margin: 0;
-      padding: 0;
-      background: linear-gradient(to bottom right, #fff5e4, #fce1e4);
+      background: linear-gradient(135deg, #fff5e4, #fce1e4);
       font-family: 'Pacifico', cursive;
       display: flex;
       flex-direction: column;
@@ -17,192 +16,147 @@
       justify-content: center;
       height: 100vh;
       overflow: hidden;
-    }
+    }h1 {
+  font-size: 2.5rem;
+  color: #6d6875;
+  margin-bottom: 20px;
+}
 
-    h1 {
-      font-size: 2.5rem;
-      color: #6d6875;
-      margin-bottom: 10px;
-      animation: floatText 3s ease-in-out infinite;
-    }
+.button {
+  padding: 15px 30px;
+  font-size: 1.2rem;
+  background-color: #fcb1b1;
+  border: none;
+  border-radius: 10px;
+  cursor: pointer;
+  color: white;
+  box-shadow: 0 4px 8px rgba(0,0,0,0.2);
+  margin-bottom: 30px;
+}
 
-    @keyframes floatText {
-      0%, 100% { transform: translateY(0); }
-      50% { transform: translateY(-5px); }
-    }
+.cake {
+  width: 200px;
+  height: 150px;
+  background: #ffb5a7;
+  border-radius: 15px 15px 10px 10px;
+  position: relative;
+  display: none;
+  box-shadow: 0 4px 10px rgba(0,0,0,0.2);
+}
 
-    .cake {
-      width: 200px;
-      height: 160px;
-      background: #ffb5a7;
-      border-radius: 20px 20px 10px 10px;
-      position: relative;
-      box-shadow: 0 4px 10px rgba(0,0,0,0.2);
-      margin-top: 20px;
-      transition: transform 0.5s ease;
-    }
+.cake::before {
+  content: '';
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 30px;
+  width: 100%;
+  background: repeating-linear-gradient(45deg, #ffffff, #ffffff 5px, #ffc8dd 5px, #ffc8dd 10px);
+  border-radius: 15px 15px 0 0;
+}
 
-    .cake::before {
-      content: '';
-      position: absolute;
-      top: 0;
-      left: 0;
-      height: 30px;
-      width: 100%;
-      background: repeating-linear-gradient(
-        45deg,
-        #ffffff,
-        #ffffff 5px,
-        #ffc8dd 5px,
-        #ffc8dd 10px
-      );
-      border-radius: 20px 20px 0 0;
-    }
+.candle {
+  width: 10px;
+  height: 40px;
+  background: #fff;
+  position: absolute;
+  top: -50px;
+  left: 95px;
+  border-radius: 5px;
+}
 
-    .candle {
-      width: 10px;
-      height: 40px;
-      background: #ffffff;
-      position: absolute;
-      top: -50px;
-      left: 95px;
-      border-radius: 5px;
-    }
+.flame {
+  width: 10px;
+  height: 15px;
+  background: gold;
+  border-radius: 50%;
+  position: absolute;
+  top: -15px;
+  left: 0;
+  animation: flameFlicker 0.3s infinite alternate;
+}
 
-    .flame {
-      width: 10px;
-      height: 15px;
-      background: gold;
-      border-radius: 50%;
-      position: absolute;
-      top: -15px;
-      left: 0;
-      animation: flameFlicker 0.3s infinite alternate;
-    }
+@keyframes flameFlicker {
+  from { transform: scaleY(1); }
+  to { transform: scaleY(1.3); }
+}
 
-    @keyframes flameFlicker {
-      from { transform: scaleY(1); }
-      to { transform: scaleY(1.3); }
-    }
+.message {
+  max-width: 90%;
+  font-size: 1.3rem;
+  color: #4e4e4e;
+  text-align: center;
+  margin-top: 20px;
+  white-space: nowrap;
+  overflow: hidden;
+  border-right: 3px solid #4e4e4e;
+  width: 0;
+  opacity: 0;
+}
 
-    .knife {
-      width: 80px;
-      height: 10px;
-      background: #999;
-      position: absolute;
-      top: 320px;
-      left: 50%;
-      margin-left: -40px;
-      border-radius: 5px;
-      touch-action: none;
-      z-index: 10;
-    }
+@keyframes typewriter {
+  from { width: 0; opacity: 1; }
+  to { width: 100%; opacity: 1; }
+}
 
-    .message {
-      max-width: 90%;
-      font-size: 1.2rem;
-      color: #4e4e4e;
-      text-align: center;
-      margin-top: 30px;
-      white-space: nowrap;
-      overflow: hidden;
-      border-right: 3px solid #4e4e4e;
-      width: 0;
-      opacity: 0;
-    }
+audio {
+  display: none;
+}
 
-    @keyframes typewriter {
-      from { width: 0; opacity: 1; }
-      to { width: 100%; opacity: 1; }
-    }
-
-    .gift {
-      position: absolute;
-      bottom: 50px;
-      background: #ffafcc;
-      padding: 20px;
-      border-radius: 20px;
-      box-shadow: 0 0 20px rgba(0,0,0,0.2);
-      display: none;
-      font-size: 1.4rem;
-      color: #fff;
-      animation: popIn 1s ease forwards;
-    }
-
-    @keyframes popIn {
-      0% { transform: scale(0); opacity: 0; }
-      100% { transform: scale(1); opacity: 1; }
-    }
-
-    audio {
-      display: none;
-    }
   </style>
 </head>
 <body>
-  <h1>🎉 Happy Birthday Vaibhavi 🎉</h1>
+  <h1>🎉 Happy Birthday Vaibhavi 🎉</h1><button class="button" onclick="openCake()">Click to open your cake 🎂</button>
 
   <div class="cake" id="cake">
     <div class="candle">
       <div class="flame"></div>
     </div>
-  </div>
-
-  <div class="knife" id="knife" draggable="true"></div>
-
-  <div class="message" id="wish">
+  </div>  <div class="message" id="wish">
     happy birthday many many wishes to you I hope you will succeed in life and thoda kam soya karo buddhu 😂
-  </div>
-
-  <div class="gift" id="gift">🎁 Here's a hidden gift of love and blessings!</div>
-
-  <audio id="bgmusic">
+  </div>  <audio id="bgmusic" autoplay>
     <source src="https://www.soundhelix.com/examples/mp3/SoundHelix-Song-1.mp3" type="audio/mp3">
-  </audio>
+  </audio>  <script>
+    function openCake() {
+      const cake = document.getElementById("cake");
+      const wish = document.getElementById("wish");
+      const music = document.getElementById("bgmusic");
 
-  <script>
-    const knife = document.getElementById("knife");
-    const cake = document.getElementById("cake");
-    const wish = document.getElementById("wish");
-    const gift = document.getElementById("gift");
-    const music = document.getElementById("bgmusic");
+      cake.style.display = "block";
+      wish.style.animation = "typewriter 4s steps(60, end) forwards";
+      wish.style.opacity = 1;
 
-    let offsetX, offsetY;
-    let cakeCut = false;
-
-    knife.addEventListener('touchstart', function(e) {
-      const touch = e.touches[0];
-      offsetX = touch.clientX - knife.offsetLeft;
-      offsetY = touch.clientY - knife.offsetTop;
-    }, false);
-
-    knife.addEventListener('touchmove', function(e) {
-      e.preventDefault();
-      const touch = e.touches[0];
-      const x = touch.clientX - offsetX;
-      const y = touch.clientY - offsetY;
-      knife.style.left = `${x}px`;
-      knife.style.top = `${y}px`;
-
-      const knifeRect = knife.getBoundingClientRect();
-      const cakeRect = cake.getBoundingClientRect();
-
-      if (!cakeCut &&
-        knifeRect.top < cakeRect.bottom &&
-        knifeRect.bottom > cakeRect.top &&
-        knifeRect.left < cakeRect.right &&
-        knifeRect.right > cakeRect.left
-      ) {
-        cakeCut = true;
-        cake.style.transform = "scale(1.05)";
-        setTimeout(() => music.play().catch(() => {}), 1500);
-        wish.style.animation = "typewriter 4s steps(60, end) forwards";
-        wish.style.opacity = 1;
-        setTimeout(() => {
-          gift.style.display = "block";
-        }, 5000);
+      try {
+        music.play();
+      } catch (e) {
+        alert("Tap again to enable music 🎵");
       }
-    }, false);
-  </script>
-</body>
+
+      launchConfetti();
+    }
+
+    function launchConfetti() {
+      const duration = 5 * 1000;
+      const end = Date.now() + duration;
+      (function frame() {
+        confetti({
+          particleCount: 5,
+          angle: 60,
+          spread: 55,
+          origin: { x: 0 },
+          colors: ['#ffcad4', '#cdb4db', '#ffc8dd', '#bde0fe']
+        });
+        confetti({
+          particleCount: 5,
+          angle: 120,
+          spread: 55,
+          origin: { x: 1 },
+          colors: ['#ffcad4', '#cdb4db', '#ffc8dd', '#bde0fe']
+        });
+        if (Date.now() < end) {
+          requestAnimationFrame(frame);
+        }
+      })();
+    }
+  </script></body>
 </html>
