--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
-<!DOCTYPE html><html lang="en">
+<!DOCTYPE html>
+<html lang="en">
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -16,114 +17,124 @@
       justify-content: center;
       height: 100vh;
       overflow: hidden;
-    }h1 {
-  font-size: 2.5rem;
-  color: #6d6875;
-  margin-bottom: 20px;
-}
+    }
 
-.button {
-  padding: 15px 30px;
-  font-size: 1.2rem;
-  background-color: #fcb1b1;
-  border: none;
-  border-radius: 10px;
-  cursor: pointer;
-  color: white;
-  box-shadow: 0 4px 8px rgba(0,0,0,0.2);
-  margin-bottom: 30px;
-}
+    h1 {
+      font-size: 2.5rem;
+      color: #6d6875;
+      margin-bottom: 20px;
+      text-align: center;
+    }
 
-.cake {
-  width: 200px;
-  height: 150px;
-  background: #ffb5a7;
-  border-radius: 15px 15px 10px 10px;
-  position: relative;
-  display: none;
-  box-shadow: 0 4px 10px rgba(0,0,0,0.2);
-}
+    .button {
+      padding: 15px 30px;
+      font-size: 1.2rem;
+      background-color: #fcb1b1;
+      border: none;
+      border-radius: 10px;
+      cursor: pointer;
+      color: white;
+      box-shadow: 0 4px 8px rgba(0,0,0,0.2);
+      margin-bottom: 30px;
+    }
 
-.cake::before {
-  content: '';
-  position: absolute;
-  top: 0;
-  left: 0;
-  height: 30px;
-  width: 100%;
-  background: repeating-linear-gradient(45deg, #ffffff, #ffffff 5px, #ffc8dd 5px, #ffc8dd 10px);
-  border-radius: 15px 15px 0 0;
-}
+    .cake {
+      width: 200px;
+      height: 150px;
+      background: #ffb5a7;
+      border-radius: 15px 15px 10px 10px;
+      position: relative;
+      display: none;
+      box-shadow: 0 4px 10px rgba(0,0,0,0.2);
+    }
 
-.candle {
-  width: 10px;
-  height: 40px;
-  background: #fff;
-  position: absolute;
-  top: -50px;
-  left: 95px;
-  border-radius: 5px;
-}
+    .cake::before {
+      content: '';
+      position: absolute;
+      top: 0;
+      left: 0;
+      height: 30px;
+      width: 100%;
+      background: repeating-linear-gradient(45deg, #ffffff, #ffffff 5px, #ffc8dd 5px, #ffc8dd 10px);
+      border-radius: 15px 15px 0 0;
+    }
 
-.flame {
-  width: 10px;
-  height: 15px;
-  background: gold;
-  border-radius: 50%;
-  position: absolute;
-  top: -15px;
-  left: 0;
-  animation: flameFlicker 0.3s infinite alternate;
-}
+    .candle {
+      width: 10px;
+      height: 40px;
+      background: #fff;
+      position: absolute;
+      top: -50px;
+      left: 95px;
+      border-radius: 5px;
+    }
 
-@keyframes flameFlicker {
-  from { transform: scaleY(1); }
-  to { transform: scaleY(1.3); }
-}
+    .flame {
+      width: 10px;
+      height: 15px;
+      background: gold;
+      border-radius: 50%;
+      position: absolute;
+      top: -15px;
+      left: 0;
+      animation: flameFlicker 0.3s infinite alternate;
+    }
 
-.message {
-  max-width: 90%;
-  font-size: 1.3rem;
-  color: #4e4e4e;
-  text-align: center;
-  margin-top: 20px;
-  white-space: nowrap;
-  overflow: hidden;
-  border-right: 3px solid #4e4e4e;
-  width: 0;
-  opacity: 0;
-}
+    @keyframes flameFlicker {
+      from { transform: scaleY(1); }
+      to { transform: scaleY(1.3); }
+    }
 
-@keyframes typewriter {
-  from { width: 0; opacity: 1; }
-  to { width: 100%; opacity: 1; }
-}
+    .message {
+      max-width: 90%;
+      font-size: 1.2rem;
+      color: #4e4e4e;
+      text-align: center;
+      margin-top: 20px;
+      white-space: nowrap;
+      overflow: hidden;
+      border-right: 3px solid #4e4e4e;
+      width: 0;
+      opacity: 0;
+    }
 
-audio {
-  display: none;
-}
+    @keyframes typewriter {
+      from { width: 0; opacity: 1; }
+      to { width: 100%; opacity: 1; }
+    }
 
+    audio {
+      display: none;
+    }
   </style>
 </head>
 <body>
-  <h1>🎉 Happy Birthday Vaibhavi 🎉</h1><button class="button" onclick="openCake()">Click to open your cake 🎂</button>
+  <h1>🎉 Happy Birthday Vaibhavi 🎉</h1>
+
+  <button class="button" onclick="openCake()">Click to open your cake 🎂</button>
 
   <div class="cake" id="cake">
     <div class="candle">
       <div class="flame"></div>
     </div>
-  </div>  <div class="message" id="wish">
-    happy birthday many many wishes to you I hope you will succeed in life and thoda kam soya karo buddhu 😂
-  </div>  <audio id="bgmusic" autoplay>
-    <source src="https://www.soundhelix.com/examples/mp3/SoundHelix-Song-1.mp3" type="audio/mp3">
-  </audio>  <script>
+  </div>
+
+  <div class="message" id="wish">
+    happy birthday vaibhavi. Many many wishes to you. Hamesha khush raho, yaad rakhna sada mittar tode naal humesha rhega 😉. And haan, bs love yourself and live your life to the fullest. ❤️
+  </div>
+
+  <audio id="bgmusic" autoplay>
+    <source src="sapphire-arijit.mp3" type="audio/mp3">
+  </audio>
+
+  <script>
     function openCake() {
       const cake = document.getElementById("cake");
       const wish = document.getElementById("wish");
       const music = document.getElementById("bgmusic");
 
       cake.style.display = "block";
-      wish.style.animation = "typewriter 4s steps(60, end) forwards";
+      wish.style.animation = "typewriter 6s steps(80, end) forwards";
       wish.style.opacity = 1;
 
       try {
@@ -158,5 +169,6 @@ audio {
         }
       })();
     }
-  </script></body>
+  </script>
+</body>
 </html>
