--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
   </div>
 
   <div class="message" id="wish">
-    happy birthday vaibhavi. Many many wishes to you. Hamesha khush raho, yaad rakhna sada mittar tode naal humesha rhega 😉. And haan, bs love yourself and live your life to the fullest. ❤️
+    happy birthday vaibhavi❤️ .many many happy wishes to you 💟
   </div>
 
   <audio id="bgmusic" autoplay>
