--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
   </div>
 
   <div class="message" id="wish">
-    happy birthday vaibhavi❤️ .many many happy wishes to you 💟
+    happy birthday vaibhavi❤️ .many many wishes.💟
   </div>
 
   <audio id="bgmusic" autoplay>
